# configs

./: .bashrc  .flake8  .gitignore  .tmux.conf  .vimrc  .zshrc  README.md  README.rm  init.vim  keybindings.json  pyproject.toml  settings.json
.config/Code/User/: python_settings.json
.config/alacritty/: alacritty.yml
.github/: README.md
general/: .bashrc  .ideavimrc  .vimrc  .zshrc  init.vim
general/.config/Code/User/: settings.json
general/.config/Vscodium/: settings.json
general/.config/alacritty/: alacritty.toml
project-config-files/: .flake8  mypy.ini  pyproject.toml
