[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
flake8-commas = "^2.1.0"
flake8-docstrings = "^1.6.0"
flake8-isort = "^5.0.0"
flake8-encodings = "^0.5.0.post1"
flake8-secure-coding-standard = "^1.3.0"
flake8-string-format = "^0.3.0"
darglint = "^1.8.1"
flake8-comprehensions = "^3.10.1"
tryceratops = "^1.1.0"
flake8-datetimez = "^20.10.0"
flake8-implicit-str-concat = "^0.3.0"
flake8-return = "^1.2.0"
flake8-scream = "^0.1.0"
flake8-too-many = "^0.1.5"
flake8-broken-line = "^0.6.0"
flake8-pep3101 = "^2.0.0"
flake8-print = "^5.0.0"
flake8-use-pathlib = "^0.3.0"
flake8-functions-names = "^0.3.0"
flake8-variables-names = "^0.0.5"
pep8-naming = "^0.13.2"
flake8-fastapi = "^0.7.0"
tortoise-orm-stubs = "^0.3.7"
flake8-bugbear = "^22.10.27"
coverage = {extras = ["toml"], version = "^7.0.3"}
black = "^22.12.0"
ruff = "^0.0.272"


[tool.ruff]
select = [
    "A", "B", "D", "E", "F", "G", "N", "Q", "S", "C90", "UP", "ANN", "ASYNC", "FBT", "COM", "COM",
    "DTZ", "DJ", "EM", "ICN", "PIE", "T20", "PYI", "PT", "SIM", "TCH", "INT", "PTH", "ERA", "TRY"
]
line-length = 100
show-source = true
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    ".eggs",
    "*.egg",
    "dist",
    "tests/fixtures/**",
    "tests/**/snapshots/**",
    "alembic",
    "airich",
]
ignore = [
    "D100",
    "B008",
    "D104",
    "Q000",
    "S101",
    "PT016",
]

[tool.ruff.pydocstyle]
convention = "numpy"
ignore-decorators = ["typing.overload"]

[tools.ruff.isort]
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
line_length = 100

[tool.ruff.mccabe]
max-complexity = 11

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]
"*/migrations/versions/*" = ["D103"]


[tool.black]
line-length = 100
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[tool.mypy]
plugins = [
  "pydantic.mypy"
]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# error configure
pretty = true
show_error_codes = true

# for strict mypy
disallow_untyped_defs = true


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true


[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3


[tool.coverage]
[tool.coverage.run]
source = ["app"]
branch = true
omit = ['']
[tool.coverage.report]
exclude_lines = [
  "# noqa",
  "raise NotImplementedError"
]


[tool.pytest]
testpath = "tests"


[tool.bandit]
exclude = ['tests']

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

